package com.example.divideai.data.model

data class Member(
    val id: String = "",
    val groupId: String = "",
    val userId: String = "",
    val name: String = "",
    val email: String = "",
    val role: String = "admin"
)