@startuml DivideAi
!pragma layout smetana

skinparam backgroundColor transparent
skinparam shadowing true
skinparam classFontSize 12
skinparam classAttributeFontSize 11
skinparam class {
    BackgroundColor #FEFECE
    BorderColor #A80036
    ArrowColor #A80036
    AttributeIconColor #038048
    StereotypeFontColor #A80036
}
skinparam enum {
    BackgroundColor #FEFECE
    BorderColor #A80036
}

' ===== Tipos enumerados =====
' role, status e category são conjuntos fechados de valores: modelados como enums.
enum MemberRole {
    ADMIN
    MEMBER
}

enum FriendRequestStatus {
    PENDING
    ACCEPTED
    REJECTED
}

enum ExpenseCategory {
    FOOD
    TRANSPORT
    GROCERIES
    ENTERTAINMENT
    HOUSING
    HEALTH
    EDUCATION
    SHOPPING
    OTHER
}

' ===== Entidades do domínio =====
' Sintaxe UML de atributo: visibilidade nome: Tipo
' Chaves estrangeiras (groupId, userId, payerId, ...) NÃO aparecem como
' atributos: os vínculos são expressos pelas associações entre as classes.
class User {
    + id: String
    + name: String
    + email: String
    + profilePhoto: String
}

class Group {
    + id: String
    + title: String
    + description: String
    + iconRes: Integer
    + photo: String
}

class Member {
    + id: String
    + role: MemberRole
}

class Expense {
    + id: String
    + title: String
    + description: String
    + amount: Double
    + date: Date
    + category: ExpenseCategory
    + receipt: String
}

class ExpenseShare {
    + amountOwed: Double
    + paid: Boolean
}

class FriendRequest {
    + id: String
    + status: FriendRequestStatus
}

class SettlementTransfer {
    + amount: Double
}

' ===== Associações =====
Group "1" *-- "0..*" Member : possui >
Member "0..*" --> "1" User : refere-se a >

Group "1" *-- "0..*" Expense : contém >
Expense "0..*" --> "1" User : paga por >

Expense "1" *-- "1..*" ExpenseShare : divide-se em >
ExpenseShare "0..*" --> "1" User : atribuída a >

FriendRequest "0..*" --> "1" User : remetente >
FriendRequest "0..*" --> "1" User : destinatário >

SettlementTransfer "0..*" --> "1" User : devedor >
SettlementTransfer "0..*" --> "1" User : credor >

' ===== Dependências dos tipos enumerados =====
Member ..> MemberRole
FriendRequest ..> FriendRequestStatus
Expense ..> ExpenseCategory

@enduml
